--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^14.2.13",
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.18.0",
