--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
