--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "bootstrap-icons": "^1.11.3",
     "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
+    "jszip": "^3.10.1",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
@@ -36,6 +38,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/bootstrap": "^5.2.10",
     "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^16.18.0",
     "jasmine-core": "~4.3.0",
