--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
-    "objection": "^3.1.5"
+    "objection": "^3.1.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
