--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "objection": "^3.1.5",
     "swagger-jsdoc": "^6.2.8",
