--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "objection": "^3.1.5",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
