--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
