--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "cron": "^3.5.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "joi": "^17.13.3",
@@ -26,6 +28,7 @@
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "objection": "^3.1.5",
